# idm

./: .env.example  .gitignore  .pre-commit-config.yaml  BUILD_STATUS.md  Makefile  README.md  openapi.json  pyproject.toml  test_svc.json  trigger_pipeline_demo.py
apps/api/: Dockerfile  pyproject.toml
apps/api/.tmp/eval-test/: _summary.json  classify_pii_columns.report.md  classify_pii_columns.result.json  detect_anomalies.report.md  detect_anomalies.result.json  infer_table_description.report.md  infer_table_description.result.json  infer_table_owners.report.md  infer_table_owners.result.json  nl2sql.report.md  nl2sql.result.json
apps/api/scripts/: start_local.py
apps/api/src/idm_api/: __init__.py  config.py  db.py  main.py  rbac.py  schemas.py  verify_pipeline_fixtures.py
apps/api/src/idm_api/eval/: __init__.py  cli.py  feedback.py  judge.py  runner.py  types.py
apps/api/src/idm_api/routers/: __init__.py  assets.py  chatbi.py  column_lineage.py  descriptions.py  feedback.py  glossary.py  health.py  idm_self_mcp.py  impact.py  openlineage.py  owners.py  quality.py  scan.py  search.py  services.py  skills.py  suggestions.py  tags.py  use_case_trigger.py  use_cases.py
apps/api/src/idm_api/skills/: __init__.py  idm_self_mcp.py  llm.py  mcp.py  (+4 more)
apps/api/tests/: __init__.py  conftest.py  test_eval_feedback.py  test_eval_harness.py  test_feedback_router.py  test_health.py  test_services.py  test_skills_integration.py  test_suggestions.py
apps/api/tests/bdd/: README.md  __init__.py  conftest.py  debug_plugin.py  test_ai_governance.py  test_asset_browsing.py  test_chatbi.py  test_data_pipeline.py  test_data_quality.py  test_governance_workflow.py  test_idm_self_mcp.py  test_lineage_impact.py  test_use_case_trigger.py
(+239 files in other folders)
