[project]
name = "idm-root"
version = "0.1.0"
description = "IDM monorepo root (uv workspace marker)"
requires-python = ">=3.11"
license = { text = "Internal" }
authors = [{ name = "IDM Platform Team" }]
readme = "README.md"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "apps/*",
    "packages/*",
]

[tool.uv.sources]
