[project]
name = "idm-root"
version = "0.1.0"
description = "IDM monorepo root (uv workspace marker)"
requires-python = ">=3.11"
license = { text = "Internal" }
authors = [{ name = "IDM Platform Team" }]
readme = "README.md"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "apps/api",
    "packages/*",
]
exclude = [
    "apps/web",  # Node.js, 独立 npm 管理
]

[tool.uv.sources]
