[project]
name = "idm-api"
version = "0.1.0"
description = "IDM API service (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
    "idm-kg",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "respx>=0.21",
    "ruff>=0.8",
    "mypy>=1.13",
    "factory-boy>=3.3",
    "freezegun>=1.5",
]

[tool.uv.sources]
idm-kg = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idm_api"]
